--- a/apps/app/hehe.html
+++ b/apps/app/hehe.html
@@ -10,12 +10,83 @@
       }
     </style>
   </head>
-  <body>
-    <iframe
-      src="http://localhost:3000/data-catalogue/embed/dgmy-public-mwe_mwe_hbar_4_0"
+  <body style="display: block">
+    <!-- bar - 4 -->
+    <!-- <iframe
+        src="http://localhost:3000/data-catalogue/embed/dgmy-public-mwe_mwe_hbar_4_0"
+        width="100%"
+        onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));'
+        style="height: 500px; width: 100%; border: none; overflow: hidden; background: white"
+      /> -->
+
+    <!-- choropleth -->
+    <!-- <iframe
+      src="http://localhost:3000/data-catalogue/embed/dgmy-public-mwe_mwe_choropleth_0"
+      onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));'
+      style="height: 500px; width: 100%; border: none; overflow: hidden; background: white"
+    /> -->
+
+    <!-- geochoropleth -->
+    <!-- <iframe
+      src="http://localhost:3000/data-catalogue/embed/dgmy-public-mwe_mwe_geochoropleth_0"
+      onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));'
+      style="height: 600px; width: 50%; border: none; overflow: hidden; background: white"
+    /> -->
+
+    <!-- geodata -->
+    <!-- <iframe
+      src="http://localhost:3000/data-catalogue/embed/dgmy-public-mwe_mwe_geodata_0"
+      width="100%"
+      onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));'
+      style="height: 600px; width: 50%; border: none; overflow: hidden; background: white"
+    /> -->
+
+    <!-- heatmap / heattable -->
+    <!-- <iframe
+      src="http://localhost:3000/data-catalogue/embed/dgmy-public-mwe_mwe_heattable_0"
       width="100%"
       onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));'
       style="height: 500px; width: 100%; border: none; overflow: hidden; background: white"
+    /> -->
+
+    <!-- line -->
+    <!-- <iframe
+      src="http://localhost:3000/data-catalogue/embed/dgmy-public-mwe_mwe_line_1_0"
+      width="100%"
+      onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));'
+      style="height: 500px; width: 100%; border: none; overflow: hidden; background: white"
+    /> -->
+
+    <!-- pyramid -->
+    <!-- <iframe
+      src="http://localhost:3000/data-catalogue/embed/dgmy-public-mwe_mwe_pyramid_0"
+      width="100%"
+      onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));'
+      style="height: 500px; width: 100%; border: none; overflow: hidden; background: white"
+    /> -->
+
+    <!-- scatter -->
+    <!-- <iframe
+      src="http://localhost:3000/data-catalogue/embed/dgmy-public-mwe_mwe_scatterplot_0"
+      width="100%"
+      onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));'
+      style="height: 500px; width: 100%; border: none; overflow: hidden; background: white"
+    /> -->
+
+    <!-- map plot -->
+    <!-- <iframe
+      src="http://localhost:3000/data-catalogue/embed/dgmy-public-mwe_mwe_geopoint_0"
+      width="100%"
+      onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));'
+      style="height: 500px; width: 100%; border: none; overflow: hidden; background: white"
+    /> -->
+
+    <!-- timeseries -->
+    <iframe
+      src="http://localhost:3000/data-catalogue/embed/dgmy-public-mwe_mwe_table_0"
+      width="100%"
+      onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.clientHeight+"px";}(this));'
+      style="height: 400px; width: 100%; border: none; overflow: hidden; background: white"
     />
   </body>
 </html>
